src/main/java/com/example/DiplomaSite/error/DiplomaThesisCreationException.java
package com.example.DiplomaSite.error;

public class DiplomaThesisCreationException extends RuntimeException{
    public DiplomaThesisCreationException(String message, Throwable cause) {
        super(message, cause);
    }
}
